// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackBox should render a FeedbackBox with Header 1`] = `
<FeedbackBox__StyledFeedbackBox>
  <React.Fragment>
    <ModalHeader
      location={
        Object {
          "payload": Object {
            "city": "augsburg",
            "language": "de",
          },
          "type": "CATEGORIES",
        }
      }
      title="feedback"
    />
    <FeedbackBox__Description>
      feedbackType
    </FeedbackBox__Description>
    <Dropdown
      baseClassName="Dropdown"
      onChange={[Function]}
      options={
        Array [
          FeedbackDropdownItem {
            "feedbackType": "categories",
            "label": "contentOfCity Augsburg",
            "value": "contentOfCity Augsburg",
          },
          FeedbackDropdownItem {
            "feedbackType": "categories",
            "label": "technicalTopics",
            "value": "technicalTopics",
          },
        ]
      }
      value={
        FeedbackDropdownItem {
          "feedbackType": "categories",
          "label": "contentOfCity Augsburg",
          "value": "contentOfCity Augsburg",
        }
      }
    />
  </React.Fragment>
  <Translate(FeedbackComment)
    comment=""
    isPositiveRatingSelected={false}
    onCommentChanged={[Function]}
  />
  <FeedbackBox__SubmitButton
    onClick={[Function]}
    to={
      Object {
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "query": Object {
          "feedback": "sent",
        },
        "type": "CATEGORIES",
      }
    }
  >
    send
  </FeedbackBox__SubmitButton>
</FeedbackBox__StyledFeedbackBox>
`;

exports[`FeedbackBox should render a FeedbackBox without Header 1`] = `
<FeedbackBox__StyledFeedbackBox>
  <Translate(FeedbackComment)
    comment=""
    isPositiveRatingSelected={false}
    onCommentChanged={[Function]}
  />
  <FeedbackBox__SubmitButton
    onClick={[Function]}
    to={
      Object {
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "query": Object {
          "feedback": "sent",
        },
        "type": "CATEGORIES",
      }
    }
  >
    send
  </FeedbackBox__SubmitButton>
</FeedbackBox__StyledFeedbackBox>
`;
